--- a/MOBILE/html/new/coupon_blank.html
+++ b/MOBILE/html/new/coupon_blank.html
@@ -46,11 +46,14 @@
 <div class="gray_box">
     <hr class="hr_01">
     <div id="my_content">
-        <div class="my_smenu4">
-            <a href="/m/mypage/totsaved" class="btn_totsaved">통합포인트</a>
-            <a href="/m/mypage/deposit" class="btn_deposit">예치금</a>
-            <a href="/m/mypage/coupon" class="btn_coupon active">쿠폰</a>
-            <a href="/m/offLine/listReceipt" class="btn_recepit">영업점영수증</a>
+
+       <div class="my_smenu4">
+          <ul>
+            <li><div class="mysmenu_box"><a href="/m/mypage/totsaved" class="btn_totsaved ">통합 <br>포인트</a></div></li>
+            <li><div class="mysmenu_box"><a href="/m/mypage/deposit active" class="btn_deposit">예치금</a></div></li>
+            <li><div class="mysmenu_box"><a href="/m/mypage/coupon"  class="btn_coupon active">쿠폰</a></div></li>
+            <li><div class="mysmenu_box"><a href="/m/offLine/listReceipt" class="btn_recepit">영업점 <br>영수증</a></div></li>
+          </ul>
         </div>
         
         <div class="my_smenu_ment"><strong>이벤트 쿠폰 등록</strong></div>
