--- a/MOBILE/html/new/deposit2.html
+++ b/MOBILE/html/new/deposit2.html
@@ -47,10 +47,12 @@
     <hr class="hr_01">
     <div id="my_content">
         <div class="my_smenu4">
-            <a href="/m/mypage/totsaved" class="btn_totsaved">통합<br>포인트</a>
-            <a href="/m/mypage/deposit" class="btn_deposit active">예치금</a>
-            <a href="/m/mypage/coupon" class="btn_coupon">쿠폰</a>
-            <a href="/m/offLine/listReceipt" class="btn_recepit">영업점<br>영수증</a>
+          <ul>
+            <li><div class="mysmenu_box"><a href="/m/mypage/totsaved" class="btn_totsaved ">통합 <br>포인트</a></div></li>
+            <li><div class="mysmenu_box"><a href="/m/mypage/deposit active" class="btn_deposit active">예치금</a></div></li>
+            <li><div class="mysmenu_box"><a href="/m/mypage/coupon"  class="btn_coupon">쿠폰</a></div></li>
+            <li><div class="mysmenu_box"><a href="/m/offLine/listReceipt" class="btn_recepit">영업점 <br>영수증</a></div></li>
+          </ul>
         </div>
         <div class="info t_c space_pad mt30">고객님의 온라인 예치금은 <span class="color_01"><strong class="only_english">88,264,100</strong></span> 원 입니다.</div>
         <!-- <p class="info t_c">고객님의 온라인 예치금은 <span class="col_orange"><strong>88,264,100</strong></span> 원 입니다.</p> -->
