--- a/MOBILE/html/new/listReceipt_blank.html
+++ b/MOBILE/html/new/listReceipt_blank.html
@@ -48,10 +48,12 @@
     <!-- sub contents -->
     <div id="my_content">
         <div class="my_smenu4">
-            <a href="/m/mypage/totsaved" class="btn_totsaved">통합<br>포인트</a>
-            <a href="/m/mypage/deposit" class="btn_deposit">예치금</a>
-            <a href="/m/mypage/coupon" class="btn_coupon">쿠폰</a>
-            <a href="/m/offLine/listReceipt" class="btn_recepit active">영업점<br>영수증</a>
+          <ul>
+            <li><div class="mysmenu_box"><a href="/m/mypage/totsaved" class="btn_totsaved ">통합 <br>포인트</a></div></li>
+            <li><div class="mysmenu_box"><a href="/m/mypage/deposit active" class="btn_deposit">예치금</a></div></li>
+            <li><div class="mysmenu_box"><a href="/m/mypage/coupon"  class="btn_coupon">쿠폰</a></div></li>
+            <li><div class="mysmenu_box"><a href="/m/offLine/listReceipt" class="btn_recepit active">영업점 <br>영수증</a></div></li>
+          </ul>
         </div>
         <!-- <div class="my_smenu_ment">총 <span class="col_orange"> 0 건</span>이 있습니다.</div> -->
          <div class="info t_c space_pad mt30">총<strong class="only_english color_01"> 0 </strong>건이 있습니다.</div>
