--- a/MOBILE/html/new/totsaved.html
+++ b/MOBILE/html/new/totsaved.html
@@ -49,10 +49,10 @@
         <div id="my_content">
             <div class="my_smenu4">
               <ul>
-                <li><a href="/m/mypage/totsaved" class="btn_totsaved active">통합 <br>포인트</a></li>
-                <li><a href="/m/mypage/deposit" class="btn_deposit">예치금</a></li>
-                <li><a href="/m/mypage/coupon"  class="btn_coupon">쿠폰</a></li>
-                <li><a href="/m/offLine/listReceipt" class="btn_recepit">영업점 <br>영수증</a></li>
+                <li><div class="mysmenu_box"><a href="/m/mypage/totsaved" class="btn_totsaved active">통합 <br>포인트</a></div></li>
+                <li><div class="mysmenu_box"><a href="/m/mypage/deposit" class="btn_deposit">예치금</a></div></li>
+                <li><div class="mysmenu_box"><a href="/m/mypage/coupon"  class="btn_coupon">쿠폰</a></div></li>
+                <li><div class="mysmenu_box"><a href="/m/offLine/listReceipt" class="btn_recepit">영업점 <br>영수증</a></div></li>
               </ul>
             </div>
             <!-- <p class="info t_c">
