--- a/MOBILE/html/new/totsaved_blank.html
+++ b/MOBILE/html/new/totsaved_blank.html
@@ -47,12 +47,14 @@
 <input type="hidden" name="eof" value="1"/>
 <div class="">
     <div id="my_content">
-        <div class="my_smenu4">
-            <a href="/m/mypage/totsaved" class="btn_totsaved active">통합 <br>포인트</a>
-            <a href="/m/mypage/deposit" class="btn_deposit">예치금</a>
-            <a href="/m/mypage/coupon"  class="btn_coupon">쿠폰</a>
-            <a href="/m/offLine/listReceipt" class="btn_recepit">영업점 <br>영수증</a>
-        </div>
+          <div class="my_smenu4">
+            <ul>
+              <li><div class="mysmenu_box"><a href="/m/mypage/totsaved" class="btn_totsaved active">통합 <br>포인트</a></div></li>
+              <li><div class="mysmenu_box"><a href="/m/mypage/deposit" class="btn_deposit">예치금</a></div></li>
+              <li><div class="mysmenu_box"><a href="/m/mypage/coupon"  class="btn_coupon">쿠폰</a></div></li>
+              <li><div class="mysmenu_box"><a href="/m/offLine/listReceipt" class="btn_recepit">영업점 <br>영수증</a></div></li>
+            </ul>
+          </div>
         <!-- <p class="info t_c">
           <p class="f20 t_c">고객님의 통합포인트는 <span class="col_orange"><strong>0</strong></span>원 입니다.</p>
           <p class="f12 col_grey">(구)마일리지를 소지하신 고객님께서는 교보문고에서 확인가능합니다.</p>
