--- a/MOBILE/html/new/list_wish_like1.html
+++ b/MOBILE/html/new/list_wish_like1.html
@@ -68,8 +68,8 @@
         <div class="search_tab">
             <ul>
                 <li><a href="#none">좋아요♥ 상품<span class="font_t">(2,110)</span></a></li>
-                <li class="active"><a href="#none">좋아요♥ 브랜드<span class="font_t">(2,110)</span></a></li>
-                <li><a href="#none">이럴 때, 좋아요♥<span class="font_t">(2,110)</span></a></li>
+                <li><a href="#none">좋아요♥ 브랜드<span class="font_t">(2,110)</span></a></li>
+                <li class="active"><a href="#none">이럴 때, 좋아요♥<span class="font_t">(2,110)</span></a></li>
             </ul>
         </div>
         <div class="sort_link_wrap">
@@ -92,12 +92,12 @@
                 </div>
             </div>
 
-            <div class="recobell_list brand">
+            <div class="recobell_list">
                 <div class="category detail_recobell">
                     <div class="swiper-container">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide clear">
-                                <div class="choice_wrap type_squre odd">
+                            <div class="swiper-slide">
+                                <div class="choice_wrap type_squre">
                                     <input type="checkbox" name="chk" id="orderInfo_21" value="Y">
                                     <label class="choice_like_thing" for="orderInfo_21"></label>
                                     <a href="#n" class="link">
@@ -106,7 +106,8 @@
                                         </div>
                                     </a>
                                     <div class="desc">
-                                        <p class="brand  width70 elip font_t">sdfsdf</p>
+                                        <p class="txt width70 bold">[모트모트] 태스크 매니저 100DAYS – 화이트태스크 매니저 100DAYS – 화이트태스크 매니저 100DAYS – 화이트태스크 매니저 100DAYS – 화이트</p>
+                                        <p class="txt ">[모트모트] 태스크 매니저 </p>
                                         <a href="#n" class="trash_delete">삭제</a>
                                     </div>
                                 </div>   
@@ -119,7 +120,8 @@
                                         </div>
                                      </a>
                                     <div class="desc">
-                                        <p class="brand width70 elip font_t">sdfsdf</p>
+                                        <p class="txt width70 bold">[모트모트] 태스크 매니저 100DAYS – 화이트태스크 매니저 100DAYS – 화이트태스크 매니저 100DAYS – 화이트태스크 매니저 100DAYS – 화이트</p>
+                                        <p class="txt ">[모트모트] 태스크 매니저 1</p>
                                         <a href="#n" class="trash_delete">삭제</a>
                                     </div>
                                 </div>   
