--- a/PC/html/new/listWishProduct.html
+++ b/PC/html/new/listWishProduct.html
@@ -82,6 +82,7 @@ $(document).ready(function(){
         bodyScroll();//body scroll  
     }
 
+    //210129 작업부분
     // 전체선택
     $("input[name=chkAll]").each(function(){
         $(this).click(function(){ 
