--- a/MOBILE/html/new/list_wish_product.html
+++ b/MOBILE/html/new/list_wish_product.html
@@ -24,6 +24,26 @@
 <script type="text/javascript" src="../../js/biz/m_hott.js"></script>
 <script type="text/javascript" src="../../js/biz/jquery/jquery.easing.1.3.min.js"></script>
 <script type="text/javascript" src="../../js/biz/jquery/TweenMax.min.js"></script>
+<script type="text/javascript">
+  $(function(){
+
+
+    //210129 작업부분
+    // 전체선택
+    $("input[name=chkAll]").each(function(){
+        $(this).click(function(){ 
+         if($(this).prop("checked")) { 
+            $(this).closest('.at_this_time_like_wrap').find($("input[type=checkbox]")).prop("checked",true); 
+        
+         } else { 
+            $(this).closest('.at_this_time_like_wrap').find($("input[type=checkbox]")).prop("checked",false); } 
+        })
+    });
+  })
+
+
+
+</script>
 </head>
 <body>
 
@@ -43,7 +63,7 @@
   
 <!-- #content -->
 <div id="content">
-    <div>
+    <div class="my">
         <div class="search_tab">
             <ul>
                 <li class="active"><a href="#none">좋아요♥ 상품<span class="font_t">(2,110)</span></a></li>
@@ -57,8 +77,82 @@
                 <li><a href="#none">브랜드<span class="font_t">(2,110)</span></a></li>
             </ul>
         </div>
-        <div>
-            <a href="#none">전체</a>
+        <div class="sort_link_wrap">
+            <a href="#none" class="sort_link">전체<span class="num font_t">(14)</span></a>
+            <a href="#none" class="sort_link">디자인/문구<span class="num font_t">(14)</span></a>
+            <a href="#none" class="sort_link">고급필기구<span class="num font_t">(14)</span></a>
+            <a href="#none" class="sort_link">뷰티/헬스<span class="num font_t">(14)</span></a>
+        </div>
+
+        <div class="at_this_time_like_wrap">
+            <div class="clear space_pad">
+                <div class="unit_like_allcheck_wrap">
+                    <span class="choice_wrap type_squre">
+                        <input type="checkbox" name="chkAll" id="orderInfo_26" value="Y">
+                        <label for="orderInfo_26">전체선택</label>
+                    </span>
+                </div>
+                <div class="fl_r">
+                    <button class="choice_delete">선택삭제</button>
+                </div>
+            </div>
+
+            <div class="recobell_list">
+                <div class="category detail_recobell">
+                    <div class="swiper-container">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="choice_wrap type_squre">
+                                    <input type="checkbox" name="chk" id="orderInfo_21" value="Y">
+                                    <label class="choice_like_thing" for="orderInfo_21"></label>
+                                    <a href="#n" class="link">
+                                        <div class="thum">
+                                            <img src="http://image.kyobobook.co.kr/newimages/giftshop_new/goods/400/1566/hot1522299774086.jpg" alt="짱구는못말려 메모지" onerror="this.src='http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/no_image2.gif';">
+                                        </div>
+                                    </a>
+                                    <div class="desc">
+                                        <p class="brand font_t">sdfsdf</p>
+                                        <p class="txt">[모트모트] 태스크 매니저 100DAYS – 화이트태스크 매니저 100DAYS – 화이트태스크 매니저 100DAYS – 화이트태스크 매니저 100DAYS – 화이트</p>
+                                        <p class="price font_t">
+                                            <span class="percent">10%</span>
+                                                    3,800
+                                        </p>
+                                        <a href="#n" class="trash_delete">삭제</a>
+                                    </div>
+                                </div>   
+                                <div class="choice_wrap type_squre">
+                                    <input type="checkbox" name="chk" id="orderInfo_27" value="Y">
+                                    <label class="choice_like_thing" for="orderInfo_27"></label>
+                                    <a href="#n" class="link">
+                                        <div class="thum">
+                                            <img src="http://image.kyobobook.co.kr/newimages/giftshop_new/goods/400/1566/hot1522299774086.jpg" alt="짱구는못말려 메모지" onerror="this.src='http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/no_image2.gif';">
+                                        </div>
+                                     </a>
+                                    <div class="desc">
+                                        <p class="brand font_t">sdfsdf</p>
+                                        <p class="txt">[모트모트] 태스크 매니저 100DAYS – 화이트태스크 매니저 100DAYS – 화이트태스크 매니저 100DAYS – 화이트태스크 매니저 100DAYS – 화이트</p>
+                                        <p class="price font_t">
+                                            <span class="percent">10%</span>3,800
+                                        </p>
+                                        <a href="#n" class="trash_delete">삭제</a>
+                                    </div>
+                                </div>   
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="paging mb0 mt0">    
+                <ul>
+                    <li><a href="javascript://" class="active">1</a></li>        
+                    <li><a title="2페이지로 이동" href="javascript:goList('2')">2</a></li>
+                    <li><a title="3페이지로 이동" href="javascript:goList('3')">3</a></li>        
+                    <li><a title="4페이지로 이동" href="javascript:goList('4')">4</a></li>        
+                    <li><a title="5페이지로 이동" href="javascript:goList('5')">5</a></li>
+                </ul>
+                <a href="javascript:goList('6')" class="next">다음</a>
+            </div>
         </div>
     </div>
 </div>
