--- a/MOBILE/html/new/coupon.html
+++ b/MOBILE/html/new/coupon.html
@@ -56,7 +56,9 @@
           </ul>
         </div>
         
-        <div class="my_smenu_ment"><strong>이벤트 쿠폰 등록</strong></div>
+        <div class="my_smenu_ment">
+          <strong>이벤트 쿠폰 등록</strong>
+        </div>
         <div style="text-align: center;">
             <input name="couponNum" id="couponNum" value="" type="text" class="i_input">
             <a href="javascript:couponReg()" class="btn btn_type01 black">등록</a>
