--- a/MOBILE/html/new/deposit.html
+++ b/MOBILE/html/new/deposit.html
@@ -100,9 +100,9 @@
                 </ul>
             </div>
 
-            <div class="box_flex mt20"> 
+            <!-- <div class="box_flex mt20"> 
                 <a href="javascript://" onclick="depositRequest()" class="btn btn_basic"> 예치금 환불 신청</a>
-            </div>
+            </div> -->
         </div>
         
         <!-- //content -->
