--- a/MOBILE/html/new/totsaved.html
+++ b/MOBILE/html/new/totsaved.html
@@ -67,7 +67,8 @@
                 <a href="javascript:location.replace('/m/mypage/totsaved?srchMaxDate=3&srchGbn=1')" class="btn tog_btn active">3개월</a>
                 <a href="javascript:location.replace('/m/mypage/totsaved?srchMaxDate=6&srchGbn=1')" class="btn tog_btn">6개월</a>
                 <a href="javascript:location.replace('/m/mypage/totsaved?srchMaxDate=12&srchGbn=1')" class="btn tog_btn">12개월</a>
-                <select name="srchGbn" class="select" title="포인트 검색옵션 선택" style="width:30%;" onchange="location.replace('/m/mypage/totsaved?srchMaxDate=3&srchGbn='+this.value)">
+                <!-- <select name="srchGbn" class="select" title="포인트 검색옵션 선택" onchange="location.replace('/m/mypage/totsaved?srchMaxDate=3&srchGbn='+this.value)"> -->
+                  <select name="srchGbn" class="select" title="포인트 검색옵션 선택" >
                     <option value="1" selected="selected">전체</option>
                     <option value="2" >적립</option>
                     <option value="3" >사용</option>
