--- a/MOBILE/html/new/savePointByOffBill.html
+++ b/MOBILE/html/new/savePointByOffBill.html
@@ -70,7 +70,7 @@
                 <a href="javascript:;" class="active">영수증 후 적립</a>
             </div>
             <form id="offPoint" name="offPoint" style="margin:30px 0;">
-                <table class="table" summary="영수증 적립" border="1">
+                <table class="tabab" summary="영수증 적립" border="1">
                     <caption>영수증 적립</caption>
                     <colgroup>
                         <col width="*">
